--- a/contact.html
+++ b/contact.html
@@ -30,11 +30,11 @@
 
     <div class="socio">
         <ul>
-        <li><a href="#"><div class="fa fa-linkedin-square" style="font-size:270px;color:#0A66C2"></div></a></li>
-        <li><a href="#"><div class="fa fa-twitter" style="font-size:270px;color:white"></div></a></li>
+        <li><a href="https://www.linkedin.com/in/roshni-nekkanti-24454224b/"><div class="fa fa-linkedin-square" style="font-size:270px;color:#0A66C2"></div></a></li>
+        <li><a href="https://twitter.com/roshni_nekkanti"><div class="fa fa-twitter" style="font-size:270px;color:white"></div></a></li>
          <!--<li><a href="#"><div class="fa fa-pinterest" style="font-size:270px;color:red"></div></a></li>-->
         <li><a href="mailto:roshninekkanti@gmail.com"><div class="fa fa-envelope" style="font-size:270px;color: #56C5F7;"></div></a></li>
-        <li><a href="#"><div class="fa fa-github" style="font-size:270px;color:white"></div></a></li>
+        <li><a href="https://github.com/Ro-shni"><div class="fa fa-github" style="font-size:270px;color:white"></div></a></li>
         <!--<li><a href=https://www.instagram.com/roshni_chowdary/><div class="fa fa-instagram" style="font-size:270px;color:white"></div></a></li>-->
         </ul>
     </div>
