corrections in project page

--- a/projects.html
+++ b/projects.html
@@ -35,9 +35,9 @@
             <div class="container">
               <h2>STUDENT CLUB</h2>
               <p class="title">HACKATHON &amp; SVECW</p>
-              <p>assesible website regarding students club to </p>
-              <p>dfkjnadkjfhaiufjndfkdlfjdjuf</p>
-              <p><button class="button">git rep</button></p>
+              <p>website regarding students club</p>
+              <p>...............................</p>
+              <p><button class="button">git repo</button></p>
             </div>
           </div>
         </div>
@@ -48,8 +48,8 @@
             <div class="container">
               <h2>SUN WISE</h2>
               <p class="title">solar</p>
-              <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-              <p>example@example.com</p>
+              <p>calculating solar energy .</p>
+              <p>.......................................</p>
               <p><button class="button">git repo</button></p>
             </div>
           </div>
@@ -77,8 +77,8 @@
                 <div class="container">
                 <h2>ON SOMETHING NEW</h2>
                 <p class="title">OSN</p>
-                <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                <p>example@example.com</p>
+                <p>personal blog website .</p>
+                <p>student friendly</p>
                 <p><button class="button">gitrep</button></p>
                 </div>
             </div>
@@ -103,8 +103,8 @@
               <div class="container">
                 <h2>portfolio</h2>
                 <p class="title">portfolio &amp; web</p>
-                <p>assesible website regarding students club to </p>
-                <p>dfkjnadkjfhaiufjndfkdlfjdjuf</p>
+                <p>personal portfolio website</p>
+                <p>to showcase my web skills</p>
                 <p><button class="button">git rep</button></p>
               </div>
             </div>
